--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .mh-image img {
     width: 30%;
+    min-height: 294.4px;
     /*height: auto;*/
 }
 
@@ -212,6 +213,7 @@ body {
 
 .container img {
     width: 100%;
+    min-height: 294.4px;
 }
 .container p {
     width: 100%;
